# agentplan

./: .gitignore  DESIGN.md  README.md  agentplan.py  pyproject.toml
tests/: test_agentplan.py
